# gabp-sparse-inv

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bench_results.csv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  draft-pdf.yml
archive/bench/: matched_fit_taskA.py
archive/docs/: CONFIRMATORY_RESULTS.md  PREREGISTRATION.md  PREREGISTRATION_CONFIRMATORY.md  PREREGISTRATION_MATCHED_FIT_CONFIRMATORY.md  _matched_fit_taskA.md  _phenomenon_menu.md
docs/: APPLICATIONS.md  ARCHITECTURE.md  DELTANET.md  DEQ.md  E4_BASELINES.md  MAZE.md  PREREGISTRATION.md  PREREGISTRATION_CONFIRMATORY.md  PROJECT_STATUS.md  ROADMAP.md  _phase1_findings.md  _phenomenon_menu.md  derivations.md
gabp_sparse_inv/: __init__.py  _linalg.py  autodiff.py  chain.py  generators.py  gmrf.py  gmrf_grid.py  junction.py  junction_autodiff.py  layout.py  nonsym.py  nonsym_junction.py  sampling.py  star.py  tree.py
gabp_sparse_inv/bench/: __init__.py  gmrf_scaling.py  harness.py  matched_compute.py  metrics.py  nonsym_stability.py  precision.py  run.py  stability.py
gabp_sparse_inv/demos/: __init__.py  deltanet_chunk.py  deq_fixedpoint.py  maze_baselines.py  maze_grid.py  maze_tree.py
paper/: make_figures.py
tests/: test_autodiff.py  test_chain.py  test_deltanet_chunk.py  test_deq_fixedpoint.py  test_double_backward.py  test_generators.py  test_gmrf.py  test_gmrf_grid.py  test_junction.py  test_junction_autodiff.py  test_junction_batched.py  test_matched_compute.py  test_maze_baselines.py  test_maze_grid.py  test_maze_tree.py  test_nonsym.py  test_nonsym_junction.py  test_nonsym_stability.py  test_nonsym_tree.py  test_ordering.py  test_packaging.py  test_precision.py  test_sampling.py  test_stability.py  test_star.py  test_tree.py
(+158 files in other folders)
