[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gabp-sparse-inv"
dynamic = ["version"]
description = "Differentiable selected inverse (plus log-det, Gaussian sampling, and solve) for sparse block-structured SPD and non-symmetric matrices, via Gaussian belief propagation / the Takahashi recurrence."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Vanshdeep Sehrawat", email = "vanshdeep.sehrawat@gmail.com" }]
keywords = [
    "selected-inverse",
    "selected-inversion",
    "sparse-linear-algebra",
    "gaussian-belief-propagation",
    "takahashi",
    "differentiable",
    "pytorch",
    "gmrf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Homepage = "https://github.com/vanshsehrawat14/gabp-sparse-inv"
Repository = "https://github.com/vanshsehrawat14/gabp-sparse-inv"
Documentation = "https://github.com/vanshsehrawat14/gabp-sparse-inv#readme"
"Bug Tracker" = "https://github.com/vanshsehrawat14/gabp-sparse-inv/issues"
Changelog = "https://github.com/vanshsehrawat14/gabp-sparse-inv/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "gabp_sparse_inv.__version__" }

[tool.setuptools.packages.find]
include = ["gabp_sparse_inv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
